mofified the raw data resulting into modifying the bigram processing step

--- a/data_preproc/eda_tf_benchmark.ipynb
+++ b/data_preproc/eda_tf_benchmark.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "### TypeFormer Benchmark Analysis\n",
     "\n",
-    "#### Keycodes analysis"
+    "#### Keycodes analysis - undefined keycodes used in the benchmark"
    ]
   },
   {
