--- a/data_preproc/prc_desk.ipynb
+++ b/data_preproc/prc_desk.ipynb
@@ -81,11 +81,12 @@
     "    \n",
     "    sequence = []\n",
     "    for idx, row in group.iterrows():\n",
-    "      press_time = row['PRESS_TIME']\n",
-    "      release_time = row['RELEASE_TIME']\n",
-    "      keycode = row['KEYCODE']\n",
-    "      sequence.append((press_time, press_code,  keycode))\n",
-    "      sequence.append((release_time, release_code, keycode))\n",
+    "      # press_time = row['PRESS_TIME']\n",
+    "      # release_time = row['RELEASE_TIME']\n",
+    "      # keycode = row['KEYCODE']\n",
+    "      # sequence.append((press_time, press_code,  keycode))\n",
+    "      # sequence.append((release_time, release_code, keycode))\n",
+    "      sequence.append((row['PRESS_TIME'], row['RELEASE_TIME'], row['KEYCODE']))\n",
     "\n",
     "    # sort by time\n",
     "    sequence = sorted(sequence, key=lambda x: x[0])\n",
@@ -99,9 +100,10 @@
     "\n",
     "def validate_user_set(session_df: pd.DataFrame) -> None:\n",
     "  # validate typing sessions for each user\n",
-    "  # filter by the minimum of events per session and the maximum time difference between events\n",
+    "  # filter by the minimum of events per session and the maximum time difference between eventsv - not anymore\n",
     "  # max_time_diff = 5\n",
-    "  min_events = 50\n",
+    "\n",
+    "  min_events = 20 # minimum number of key events\n",
     "\n",
     "  valid = True\n",
     "\n",
@@ -110,20 +112,7 @@
     "\n",
     "    sequence = row[\"SEQUENCE\"]\n",
     "\n",
-    "    timestamps = list(map(lambda x: x[0], sequence))\n",
-    "\n",
-    "    # compute the difference between each timestamp\n",
-    "    delta_time = list(map(lambda x, y: x - y, timestamps[1:], timestamps[:-1]))\n",
-    "\n",
-    "    # transform to seconds\n",
-    "    delta_time = list(map(lambda x: x / 1000, delta_time))\n",
-    "\n",
-    "    # # check if the delta time is less than max_delta_t\n",
-    "    # if any(map(lambda x: x > max_time_diff, delta_time)):\n",
-    "    #   valid = False\n",
-    "    #   break\n",
-    "\n",
-    "    events_cnt = len(delta_time)\n",
+    "    events_cnt = len(sequence)\n",
     "    if events_cnt < min_events:\n",
     "      valid = False\n",
     "      break\n",
@@ -191,11 +180,12 @@
     "    df = pd.read_csv(RAW_PATH + \"/\" + session_file, sep='\\t',\n",
     "                      encoding=\"windows-1252\", quoting=csv.QUOTE_NONE)\n",
     "    session_df = keylogs_to_sesh(df)\n",
+    "   \n",
     "    if validate_user_set(session_df):\n",
     "      session_df.to_csv(PRC_PATH + \"/\" + session_file)\n",
     "  except:\n",
     "    print(\"Error processing file: \" + session_file)\n",
-    "    \n",
+    "\n",
     "    "
    ]
   },
