--- a/data_preproc/prc_mobile.ipynb
+++ b/data_preproc/prc_mobile.ipynb
@@ -243,10 +243,10 @@
     "\n",
     "def event_func(seqe):\n",
     "  new_seq = []\n",
-    "  for s in seqe:\n",
-    "    new_seq.append((s[0], 1, s[2]))\n",
-    "    new_seq.append((s[1], 0, s[2]))\n",
-    "  new_seq = sorted(new_seq, key=lambda x: x[0])\n",
+    "  # for s in seqe:\n",
+    "  #   new_seq.append((s[0], 1, s[2]))\n",
+    "  #   new_seq.append((s[1], 0, s[2]))\n",
+    "  new_seq = sorted(seqe, key=lambda x: x[0])\n",
     "  return new_seq\n",
     "\n",
     "seq_df[\"SEQUENCE\"] = seq_df[\"SEQUENCE\"].apply(event_func)"
